Update and rename jsons/translations/template.properties to jsons/bản dịch/Vietnamese.properties

--- a/jsons/bản dịch/Vietnamese.properties
+++ b/jsons/bản dịch/Vietnamese.properties
@@ -1,131 +1,131 @@
 #Units#
 
-Prophet = 
-Bireme = 
-Heavy Chariot = 
-Phalanx = 
-+25% Combat Bonus when defending = 
-Artaxiad Noble = 
-Slave Hunter = 
-Serpent Priest = 
-Sun Archer = 
-Tarantine Cavalry = 
-Nomadic Archer = 
-General = 
-Jagunjagun = 
+Prophet = Giáo sĩ
+Bireme = Bi-rê-mê
+Heavy Chariot = Cỗ xe ngựa
+Phalanx = Đoàn quân
++25% Combat Bonus when defending = +25% Bonus Chiến đấu khi phòng thủ
+Artaxiad Noble = Quý tộc thời Artaxiad
+Slave Hunter = Thợ săn nô lệ
+Serpent Priest = Giáo sư thần rắn
+Sun Archer = Cung thủ Mặt Trời
+Tarantine Cavalry = Kỵ binh Thiết giáp Hy Lạp
+Nomadic Archer = Cung thủ du mục
+General = Tướng quân
+Jagunjagun = Chiến sĩ Jagunjagun
 
 
 #UnitPromotions#
 
-Mine = 
-Mount I = 
-Mount II = 
-Pyrrhic Victory = 
+Mine = Đào
+Mount I = Cưỡi ngựa I
+Mount II = Cưỡi ngựa II
+Pyrrhic Victory = Chiến Thắng kiểu Pyrros
 
 
 #TileImprovements#
 
-Holy Place = 
-Seaside Stall = 
-Colossal Head = 
-Dam = 
-Kurgan = 
+Holy Place = Nơi thánh thiêng
+Seaside Stall = Gian hàng Bờ biển
+Colossal Head = Tượng đá hình đầu vĩ đại
+Dam = Đập
+Kurgan = Nấm mồ dưới lòng đất
 
 
 #Buildings#
 
-Mediterranean Lords = 
-Food Bonus = 
-Phoenician Alphabet = 
-Phoenician Culture = 
-Phoenician Solidarity = 
-Phoenician Wealth = 
-Phoenician Plenty = 
-Can only be built in coastal cities = 
-Will not be displayed in Civilopedia = 
-EpirusA = 
-Macrobia Bonus = 
-Free Worker (Ability) = 
-Free Terracotta = 
-Ziggurat = 
-Synagogue = 
-Sphinx Gate = 
-10 XP for all units build in this city = 
-Khachkar = 
-Slave Market = 
-Smeltery = 
+Mediterranean Lords = Các chúa vùng Địa Trung Hải
+Food Bonus = Bổ sung đồ ăn
+Phoenician Alphabet = Chữ cái Phoenician
+Phoenician Culture = Văn hóa Phoenician
+Phoenician Solidarity = Tin thần đoàn kết của người Phoenicia
+Phoenician Wealth = Sự giàu có của người Phoenicia
+Phoenician Plenty = Sự đa dạng của người Phoenicia
+Can only be built in coastal cities = Chỉ có thể xây trên các thành phố cảng
+Will not be displayed in Civilopedia = Sẽ không thể hiện trên quyển bách khoa nền văn hóa
+EpirusA = E-pi-rút A
+Macrobia Bonus = Bonus của Mạc-rô-bi-a
+Free Worker (Ability) = Công nhân miễn phí (Chức năng)
+Free Terracotta = Đất nung miễn phí
+Ziggurat = Đài thiên văn Ziggurat
+Synagogue = Giáo đường Do Thái
+Sphinx Gate = Cổng Nhân Sư
+10 XP for all units build in this city = 10 XP cho tất cả các đơn vị được chế tạo trong thành phố này
+Khachkar = Thánh giá Khachkar
+Slave Market = Chợ buôn bán nô lệ
+Smeltery = Xưởng đúc
 
 
 #TileResources#
 
-Myrrh = 
-Frankincense = 
-Terracotta = 
+Myrrh = Mộc được
+Frankincense = Trầm hương
+Terracotta = Đất nung
 
 
 #Nations#
 
-Sumeria = 
-Gilgamesh = 
-Sumerian = 
-That's enough, prepare to be smashed into the dust! = 
-You dare to attack a demigod? You will regret this sooner than you think! = 
-Defeat. A mere mortal emerged victorious. Can't wait to see how long will you last. Even demigods aren't invicible. = 
-I am Gilgamesh, a demigod who descended to Earth to lead the mighty city of Uruk. Let there be peace among us! = 
-Be blessed, friend. = 
-Go on! = 
-Just speak, don't waste my time! = 
-Oh, a peace. Maybe we should celebrate it? = 
-I present you this trade offer. = 
-Cradle of Civilization = 
-Additional 3 Science in capital and additional 1 Science in any other city. Cities with access to Fresh water have +2 Food. = 
-Uruk = 
-Eridu = 
-Kish = 
-Lagash = 
-Nibru = 
-Ur = 
-Bad-Tibira = 
-Zimbir = 
-Shuruppak = 
-Umma = 
-Larsa = 
-Isin = 
-Girsu = 
-Adab = 
-Larak = 
-Abu Salabikh = 
-Akshak = 
-Hamazi = 
-Nina = 
-Kutha = 
-Marad = 
-Zabalam = 
-Kisurra = 
-Pazurish-Dagan = 
-Kutallu = 
-Kesh = 
-Apisada = 
-Kisiga = 
-Enegi = 
-Ki-an = 
-Aratta = 
-Kutu = 
-Der = 
+Sumeria = Su-me-ri-a
+Gilgamesh = Gil-ga-mét (Gilgamesh)
+Sumerian = Người Su-me
+That's enough, prepare to be smashed into the dust! = Như vậy là quá đủ rồi đó! Chuẩn bị tinh thần mà bị đánh tan tành bay khói đi!
+You dare to attack a demigod? You will regret this sooner than you think! = Ngươi dám tấn công một vị á thần ư!? Ngươi sẽ hối hận sớm hơn ngươi nghĩ đấy!
+Defeat. A mere mortal emerged victorious. Can't wait to see how long will you last. Even demigods aren't invicible. = Ta đã bị đánh bại rồi. Một người trần lại thắng một á thần như ta. Ta không thể đợi xem vương quốc của ngươi có chịu được lâu không. Ngay cả các á thần cũng không bất bại.
+I am Gilgamesh, a demigod who descended to Earth to lead the mighty city of Uruk. Let there be peace among us! = Ta là Gil-ga-mét, 1 vị á thần đã dắt xuống thế gian này để cai trị thành U-rúc vĩ đại. Mong có hòa bình chung quanh ta!
+Be blessed, friend. = Chào bạn dưới sự ban ơn của tôi.
+Go on! = Nói tiếp đi!
+Just speak, don't waste my time! = Nói đi, đừng tốn thời gian của ta!
+Oh, a peace. Maybe we should celebrate it? = Ôi, hòa bình giữa hai ta. Hay chúng ta ăn mừng vì điều này đi?
+I present you this trade offer. = Ta cho ngươi lời đề nghị trao đổi này.
+Cradle of Civilization = Cái nôi của nền văn hóa.
+Additional 3 Science in capital and additional 1 Science in any other city. Cities with access to Fresh water have +2 Food. = Thêm 3 Khao học cho Thủ đô và 1 Khoa học cho các thành phố khác. Các thành phố có cơ hội gần nguồn nước sạch có +2 Đồ ăn.
+Uruk = U-rúc
+Eridu = Ê-ri-đu
+Kish = Kích
+Lagash = La-gát
+Nibru = Ni-bru
+Ur = Ur
+Bad-Tibira = Bát - Ti-bi-ra
+Zimbir = Ghim-bia
+Shuruppak = Sờ-rúp-pắc
+Umma = Um-ma
+Larsa = La-sa
+Isin = I-sin
+Girsu = Gi-su
+Adab = A-dáp
+Larak = La-rắc
+Abu Salabikh = A-bu Sa-la-bít
+Akshak = Ắc-sắc
+Hamazi = Ha-ma-si
+Nina = Ni-na
+Kutha = Khu-tha
+Marad = Ma-rác
+Zabalam = Gia-ba-lam
+Kisurra = Khi-su-ra
+Pazurish-Dagan = Pa-su-rít - Da-gan
+Kutallu = Khu-ta-lu
+Kesh = Két
+Apisada = A-pi-sa-đa
+Kisiga = Ki-si-ga
+Enegi = E-nê-ghi
+Ki-an = Ki-an
+Aratta = A-rát-ta
+Kutu = Khu-tu
+Der = Đê
 
-Israel = 
-Solomon = 
-Israeli = 
-The Lord demands justice! = 
-The Lord told me your plans. We are prepared! = 
-Is this how my peaceful reign ends? In a river of blood and suffering... = 
-I am Solomon, King of the Chosen People. If you seek justice or advice, know that you had found them. = 
-Greetings, friend. = 
-Praise the Lord as he gives peace! = 
-I present you this trade offer. = 
-Promised Land = 
-Pastures yield additional 1 Food and 1 Culture. Receive Prophet when you discover Calendar. Prophets are earned 25% faster. = 
-Jerusalem = 
+Israel = Ít-ra-en
+Solomon = Sô-lô-môn
+Israeli = Người Ít-ra-en
+The Lord demands justice! = Chúa cần công lý!
+The Lord told me your plans. We are prepared! = Chúa đã nói hết tất cả các kế hoạch của ngươi rồi. Chúng ta đã chuẩn bị rồi.
+Is this how my peaceful reign ends? In a river of blood and suffering... = Vậy đây là cách mà ngôi vị mà đáng lẽ ra phải hòa bình của ta đã biến mất ư? Dưới một dòng sông toàn máu và sự thống khổ ư...
+I am Solomon, King of the Chosen People. If you seek justice or advice, know that you had found them. = Ta là Sô-lô-môn, vua của dân Chúa chọn. Nếu như ngươi muốn tìm công lý hay 1 lời khuyên, ngươi biết phải tìm ai rồi đó.
+Greetings, friend. = Chào, bạn.
+Praise the Lord as he gives peace! = Lạy Chúa đã cho chúng ta hòa bình!
+I present you this trade offer. = Ta cho ngươi lời đề nghị trao đổi này.
+Promised Land = Miền Đất Hứa
+Pastures yield additional 1 Food and 1 Culture. Receive Prophet when you discover Calendar. Prophets are earned 25% faster. = Các nơi nuôi động vật cho thêm 1 Đồ ăn và 1 Văn hóa. Nhận được Giáo
+Jerusalem =  
 Hebron = 
 Gaza = 
 Jericho = 
