--- a/jsons/bản dịch/Vietnamese.properties
+++ b/jsons/bản dịch/Vietnamese.properties
@@ -1,6 +1,6 @@
 #Units#
 
-Prophet = Giáo sĩ
+Prophet = Tiên tri
 Bireme = Bi-rê-mê
 Heavy Chariot = Cỗ xe ngựa
 Phalanx = Đoàn quân
@@ -124,125 +124,125 @@ Greetings, friend. = Chào, bạn.
 Praise the Lord as he gives peace! = Lạy Chúa đã cho chúng ta hòa bình!
 I present you this trade offer. = Ta cho ngươi lời đề nghị trao đổi này.
 Promised Land = Miền Đất Hứa
-Pastures yield additional 1 Food and 1 Culture. Receive Prophet when you discover Calendar. Prophets are earned 25% faster. = Các nơi nuôi động vật cho thêm 1 Đồ ăn và 1 Văn hóa. Nhận được Giáo
-Jerusalem =  
-Hebron = 
-Gaza = 
-Jericho = 
-Bethlehem = 
-Nazareth = 
-Meggido = 
-Beer-Sheba = 
-Judah = 
-Hazor = 
-Michmash = 
-Caesarea = 
-Emmaus = 
-Tirzah = 
-Gilgal = 
-Joppa = 
-Shiloh = 
-Ashdod = 
-Ashkelton = 
-Samara = 
-Gezer = 
-Gibeon = 
-Tamar = 
-Geba = 
-Gath = 
-Avaris = 
-Dan = 
-Jebesh-Gilead = 
+Pastures yield additional 1 Food and 1 Culture. Receive Prophet when you discover Calendar. Prophets are earned 25% faster. = Các đồng cỏ cho thêm 1 Đồ ăn và 1 Văn hóa. Nhận được Tiên tri khi khám phá Lịch. Tiên tri được nhận 25% nhanh hơn.
+Jerusalem =  Giê-ru-sa-lem
+Hebron = Hếp-ron
+Gaza = Ga-gia (Gaza)
+Jericho = Giê-ri-cô
+Bethlehem = Bét-lê-hem
+Nazareth = Na-gia-rét
+Meggido = Mẹt-ghi-đô
+Beer-Sheba = Bia - Sê-ba (Beer-Sheba)
+Judah = Giu-đa
+Hazor = Ha-giô
+Michmash =Mích-mát
+Caesarea = Sê-sa-rê
+Emmaus = Em-mau
+Tirzah = Ti-gia
+Gilgal = Gi-ga (Gilgal)
+Joppa = Gióp-pa
+Shiloh = Si-lốp
+Ashdod = Át-dốp
+Ashkelton = Át-ke-tôn
+Samara = Sa-ma-ra
+Gezer = Ghê-giê
+Gibeon = Ghi-bê-ôn
+Tamar = Ta-ma
+Geba = Ghê-ba
+Gath = Ga-thờ
+Avaris = A-va-rít
+Dan = Đan (Dan)
+Jebesh-Gilead = Giê-bét - Ghi-lét
 
-Phoenicia = 
-Hiram I = 
-Phoenician = 
-We accept you for no longer! = 
-I am disappointed. Can't we simply trade and avoid the conflict? = 
-Yes, take my lands. I doubt you will make any better use of them! = 
-I am Hiram of Tyre. If you are here to trade, let's go straight into business. = 
-Hello, friend. = 
-If we are no longer at war, maybe we should trade? = 
-Shall we trade? = 
-Mediterranean Lords = 
-Your first 5 coastal cities provide +10% Gold and your choice of +3: Production or Science or Culture or Happiness or Food. Each bonus can be choosen only once. = 
-Tyre = 
-Sidon = 
-Byblos = 
-Sarepta = 
-Berytos = 
-Carthage = 
-Baalbek = 
-Zili = 
-Akko = 
-Dor = 
-Arados = 
-Quart Hadasht = 
-Leptis = 
-Utica = 
-Karalis = 
-Oia = 
-Sabratha = 
-Hadrumentum = 
-Icosium = 
-Iol = 
-Thapsos = 
-Melita = 
-Kossyra = 
-Gadir = 
-Tartessos = 
-Tharros = 
-Magador = 
-Igilgili = 
-Cirta = 
-Ebusos = 
+Phoenicia = Phoenicia
+Hiram I = Hi-ram I
+Phoenician = Người Phoenicia
+We accept you for no longer! = Chúng ta chấp nhận ngươi không lâu nữa đâu!
+I am disappointed. Can't we simply trade and avoid the conflict? = Ta rất là thất vọng về ngươi, sao chúng ta không đơn giản là trao đổi với nhau mà tránh các xung đột chứ?
+Yes, take my lands. I doubt you will make any better use of them! = Ngươi cứ lấy đất ta đi. Ta mong rằng ngươi sẽ sử dụng chúng tốt hơn ta.
+I am Hiram of Tyre. If you are here to trade, let's go straight into business. = Ta là Hi-ram xứ Ti-rê. Nếu như ngươi tới đây để trao đổi, thì cứ nói thẳng ra đi.
+Hello, friend. = Chào, bạn
+If we are no longer at war, maybe we should trade? = Nếu chúng ta không còn chiến tranh nữa, thì có thể chúng ta trao đổi ư?
+Shall we trade? = Chúng ta trao đổi được không?
+Mediterranean Lords = Các chúa vùng Địa Trung Hải
+Your first 5 coastal cities provide +10% Gold and your choice of +3: Production or Science or Culture or Happiness or Food. Each bonus can be choosen only once. = 5 thành phố đầu tiên của bạn cho +10% số vàng và +3 Sản xuất, Khoa học, Văn hóa, Hạnh phúc hay Đồ ăn. Bạn chỉ có thể chọn 1 cái 1 lần.
+Tyre = Ti-rê
+Sidon = Si-đôn
+Byblos = Bíp-lốt
+Sarepta = Sa-rếp-ta
+Berytos = Bê-ri-tốt
+Carthage = Ca-thếp
+Baalbek = Ba-bếc
+Zili = Ghi-li
+Akko = Ắc-cô
+Dor = Đô (Dor)
+Arados = A-ra-dốt
+Quart Hadasht = Quất Ha-dát
+Leptis = Lép-tít
+Utica = U-ti-ca
+Karalis = Ca-ra-lít
+Oia = Oi-a
+Sabratha = Sa-bra-tha
+Hadrumentum = Hát-ru-men-tum
+Icosium = I-cô-si-um
+Iol = I-ô
+Thapsos = Tháp-sốt
+Melita = Mê-li-ta
+Kossyra = Cốt-si-ra
+Gadir = Ga-đia
+Tartessos = Ta-te-sốt
+Tharros = Tha-rốt
+Magador = Ma-ga-đô
+Igilgili = I-ghi-ghi-li
+Cirta = Ki-ta
+Ebusos = E-bu-sốt
 
-The Hittites = 
-Mursilis II = 
-Hittite = 
-Prepare to be torn apart! = 
-We would attack you anyway. You are just hastening your defeat = 
-You were a worthy opponent, but my allies will eventually avenge me. = 
-I am the mighty Mursilis. Don't get in my way and we shall live in peace. = 
-Hail. = 
-Don't waste much of my time! = 
-Let this peace last ages! = 
-What about this? = 
-Iron Pioneers = 
-Iron and Horses tiles yield additional 1 Gold and 1 Production. Receive +10% Production bonus when constructing military units. = 
-Hattusa = 
-Nesa = 
-Kussara = 
-Samuha = 
-Tarhuntassa = 
-Kadesh = 
-Lusna = 
-Alalah = 
-Halab = 
-Tunip = 
-Kadesh = 
-Zalpa = 
-Hakpish =
-Nerik = 
-Shallapsa = 
-Arinna = 
-Adaniya = 
-Apasha = 
-Waliwanda = 
-Tapikka = 
-Tuwanuwa = 
-Ura = 
-Milid = 
-Urshu = 
-Arwada = 
-Sanahuitta = 
-Dimashku = 
-Millawanda = 
-Gaziura = 
-Ugarit = 
+The Hittites = Tộc người Hít-tay
+Mursilis II = Mu-si-lít II
+Hittite = Người Hít-tay
+Prepare to be torn apart! = Chuẩn bị tan nát đi! 
+We would attack you anyway. You are just hastening your defeat = Chúng ta vẫn tấn công ngươi mà thôi. Ngươi gần chết rồi còn đâu.
+You were a worthy opponent, but my allies will eventually avenge me. = Ngươi đúng thật là một đối thủ tuyệt vời, nhưng các đồng minh của ta sẽ trả thù cho ta mà thôi.
+I am the mighty Mursilis. Don't get in my way and we shall live in peace. = Ta là Mu-si-lít hùng mạnh. Đừng tránh đường ta và chúng ta sẽ sống trong hòa bình.
+Hail. = Chào!
+Don't waste much of my time! = Đừng tốn thời gian của ta!
+Let this peace last ages! = Mong sự hòa bình này kéo dài mãi mãi.
+What about this? = Vậy cái này thì sao?
+Iron Pioneers = Người tiên phong bằng sắt
+Iron and Horses tiles yield additional 1 Gold and 1 Production. Receive +10% Production bonus when constructing military units. = Các mảng đất có Sắt và Ngựa có thêm 1 Vàng và 1 Sản xuất. Nhận +10% Sản xuất khi chế tạo các đơn vị quân sự.
+Hattusa = Hát-tu-sa
+Nesa = Nê-sa
+Kussara = Cút-sa-ra
+Samuha = Sa-mu-ha
+Tarhuntassa = Ta-hun-tát-sa
+Kadesh = Ca-đét
+Lusna = Lút-na
+Alalah = A-la-la
+Halab = Ha-láp
+Tunip = Tu-níp
+Kadesh = Ca-đét 2.0
+Zalpa = Gia-pa
+Hakpish = Hắc-pích
+Nerik = Nê-ríc
+Shallapsa = Sa-láp-sa
+Arinna = A-rin-na
+Adaniya = A-da-ni-gia
+Apasha = A-pa-sa
+Waliwanda = Qua-li-quan-đa
+Tapikka = Ta-píc-ca
+Tuwanuwa = Tu-qua-nu-qua
+Ura = U-ra
+Milid = Mi-lít
+Urshu = U-shu
+Arwada = A-qua-da
+Sanahuitta = Sa-na-huy-ta
+Dimashku = Đi-mát-cu
+Millawanda = Mi-la-quan-đa
+Gaziura = Ga-ghi-u-ra
+Ugarit = U-ga-rít
 
-Armenia = 
-Tigranes II = 
+Armenia = Ắc-mê-ni-a
+Tigranes II = Ti-gan II
 Armenian = 
 You are a disgrace to this world and I shall end you! = 
 So that's how you treat others? We shall teach you a lesson. = 
