--- a/jsons/bản dịch/Vietnamese.properties
+++ b/jsons/bản dịch/Vietnamese.properties
@@ -201,7 +201,7 @@ The Hittites = Tộc người Hít-tay
 Mursilis II = Mu-si-lít II
 Hittite = Người Hít-tay
 Prepare to be torn apart! = Chuẩn bị tan nát đi! 
-We would attack you anyway. You are just hastening your defeat = Chúng ta vẫn tấn công ngươi mà thôi. Ngươi gần chết rồi còn đâu.
+We would attack you anyway. You are just hastening your defeat = Chúng ta vẫn tấn công ngươi mà thôi. Ngươi đang lôi sự thất bại của mình một cách vội vàng đấy.
 You were a worthy opponent, but my allies will eventually avenge me. = Ngươi đúng thật là một đối thủ tuyệt vời, nhưng các đồng minh của ta sẽ trả thù cho ta mà thôi.
 I am the mighty Mursilis. Don't get in my way and we shall live in peace. = Ta là Mu-si-lít hùng mạnh. Đừng tránh đường ta và chúng ta sẽ sống trong hòa bình.
 Hail. = Chào!
@@ -242,14 +242,14 @@ Gaziura = Ga-ghi-u-ra
 Ugarit = U-ga-rít
 
 Armenia = Ắc-mê-ni-a
-Tigranes II = Ti-gan II
-Armenian = 
-You are a disgrace to this world and I shall end you! = 
-So that's how you treat others? We shall teach you a lesson. = 
-I might perish, but my people will never forget all that suffering you have brought. = 
-I am the great Tigranes. Welcome to the hills of Armenia. I will now leave and pray for our bright future - If you don't mind. = 
-Greetings. = 
-We shall now pray for the better days! = 
+Tigranes II = Ti-gran II
+Armenian = Người Ắc-mê-ni-a
+You are a disgrace to this world and I shall end you! = Ngươi là một sự súc phạm trên thế giới này và ta cần phải tiêu diệt ngươi!
+So that's how you treat others? We shall teach you a lesson. = Vậy đây là cách đối xử với người khác à? Được. Vậy ta phải dạy ngươi một bài học rồi.
+I might perish, but my people will never forget all that suffering you have brought. = Ta có thể biến mất, nhưng dân ta sẽ không bao giờ quên những gì mà ngươi mang đến cho họ đâu!
+I am the great Tigranes. Welcome to the hills of Armenia. I will now leave and pray for our bright future - If you don't mind. = Ta là Ti-gran vĩ đại. Chào ngươi đến những đồi núi xứ Ắc-mê-ni-a. Ta sẽ rời đi cầu nguyện cho một tương lai tươi sáng - nếu ngươi không thấy phiền.
+Greetings. = Chào.
+We shall now pray for the better days! = Chúng ta cần cầu
 I bring you an excellent offer! = 
 Sacred Mountains = 
 All Mountains yield additional 2 Culture and 1 Happiness. Double quantity of Horses and units ignore terrain cost when moving into any tile with Hills. = 
