--- a/jsons/bản dịch/Vietnamese.properties
+++ b/jsons/bản dịch/Vietnamese.properties
@@ -3,7 +3,7 @@
 Prophet = Tiên tri
 Bireme = Bi-rê-mê
 Heavy Chariot = Cỗ xe ngựa
-Phalanx = Đoàn quân
+Phalanx = Đoàn quân Hy Lạp
 +25% Combat Bonus when defending = +25% Bonus Chiến đấu khi phòng thủ
 Artaxiad Noble = Quý tộc thời Artaxiad
 Slave Hunter = Thợ săn nô lệ
@@ -161,7 +161,7 @@ We accept you for no longer! = Chúng ta chấp nhận ngươi không lâu nữa
 I am disappointed. Can't we simply trade and avoid the conflict? = Ta rất là thất vọng về ngươi, sao chúng ta không đơn giản là trao đổi với nhau mà tránh các xung đột chứ?
 Yes, take my lands. I doubt you will make any better use of them! = Ngươi cứ lấy đất ta đi. Ta mong rằng ngươi sẽ sử dụng chúng tốt hơn ta.
 I am Hiram of Tyre. If you are here to trade, let's go straight into business. = Ta là Hi-ram xứ Ti-rê. Nếu như ngươi tới đây để trao đổi, thì cứ nói thẳng ra đi.
-Hello, friend. = Chào, bạn
+Hello, friend. = Chào, bạn.
 If we are no longer at war, maybe we should trade? = Nếu chúng ta không còn chiến tranh nữa, thì có thể chúng ta trao đổi ư?
 Shall we trade? = Chúng ta trao đổi được không?
 Mediterranean Lords = Các chúa vùng Địa Trung Hải
@@ -249,8 +249,8 @@ So that's how you treat others? We shall teach you a lesson. = Vậy đây là c
 I might perish, but my people will never forget all that suffering you have brought. = Ta có thể biến mất, nhưng dân ta sẽ không bao giờ quên những gì mà ngươi mang đến cho họ đâu!
 I am the great Tigranes. Welcome to the hills of Armenia. I will now leave and pray for our bright future - If you don't mind. = Ta là Ti-gran vĩ đại. Chào ngươi đến những đồi núi xứ Ắc-mê-ni-a. Ta sẽ rời đi cầu nguyện cho một tương lai tươi sáng - nếu ngươi không thấy phiền.
 Greetings. = Chào.
-We shall now pray for the better days! = Chúng ta cần cầu
-I bring you an excellent offer! = 
+We shall now pray for the better days! = Chúng ta cần cầu nguyện ngay cho những ngày tốt đẹp hơn!
+I bring you an excellent offer! = Ta mang đến cho ngươi lời đề nghị trao đổi tuyệt vời này!
 Sacred Mountains = 
 All Mountains yield additional 2 Culture and 1 Happiness. Double quantity of Horses and units ignore terrain cost when moving into any tile with Hills. = 
 Yerevan = 
