--- a/jsons/bản dịch/Vietnamese.properties
+++ b/jsons/bản dịch/Vietnamese.properties
@@ -209,7 +209,7 @@ Don't waste much of my time! = Đừng tốn thời gian của ta!
 Let this peace last ages! = Mong sự hòa bình này kéo dài mãi mãi.
 What about this? = Vậy cái này thì sao?
 Iron Pioneers = Người tiên phong bằng sắt
-Iron and Horses tiles yield additional 1 Gold and 1 Production. Receive +10% Production bonus when constructing military units. = Các mảng đất có Sắt và Ngựa có thêm 1 Vàng và 1 Sản xuất. Nhận +10% Sản xuất khi chế tạo các đơn vị quân sự.
+Iron and Horses tiles yield additional 1 Gold and 1 Production. Receive +10% Production bonus when constructing military units. = Các ô đất có Sắt và Ngựa có thêm 1 Vàng và 1 Sản xuất. Nhận +10% Sản xuất khi chế tạo các đơn vị quân sự.
 Hattusa = Hát-tu-sa
 Nesa = Nê-sa
 Kussara = Cút-sa-ra
@@ -251,9 +251,9 @@ I am the great Tigranes. Welcome to the hills of Armenia. I will now leave and p
 Greetings. = Chào.
 We shall now pray for the better days! = Chúng ta cần cầu nguyện ngay cho những ngày tốt đẹp hơn!
 I bring you an excellent offer! = Ta mang đến cho ngươi lời đề nghị trao đổi tuyệt vời này!
-Sacred Mountains = 
-All Mountains yield additional 2 Culture and 1 Happiness. Double quantity of Horses and units ignore terrain cost when moving into any tile with Hills. = 
-Yerevan = 
+Sacred Mountains = Dãi núi thiêng
+All Mountains yield additional 2 Culture and 1 Happiness. Double quantity of Horses and units ignore terrain cost when moving into any tile with Hills. = Tất cả ô đất có Núi sẽ cho thêm 2 Văn hóa và 1 Hạnh phúc. Gấp đôi số lượng Ngựa và bỏ qua chi phí đất đai khi đến tất cả ô đất có Đồi.
+Yerevan = Giê-rê-van
 Tigranakert = 
 Artashat = 
 Yervandashat = 
