--- a/jsons/bản dịch/Vietnamese.properties
+++ b/jsons/bản dịch/Vietnamese.properties
@@ -70,7 +70,7 @@ Gilgamesh = Gil-ga-mét (Gilgamesh)
 Sumerian = Người Su-me
 That's enough, prepare to be smashed into the dust! = Như vậy là quá đủ rồi đó! Chuẩn bị tinh thần mà bị đánh tan tành bay khói đi!
 You dare to attack a demigod? You will regret this sooner than you think! = Ngươi dám tấn công một vị á thần ư!? Ngươi sẽ hối hận sớm hơn ngươi nghĩ đấy!
-Defeat. A mere mortal emerged victorious. Can't wait to see how long will you last. Even demigods aren't invicible. = Ta đã bị đánh bại rồi. Một người trần lại thắng một á thần như ta. Ta không thể đợi xem vương quốc của ngươi có chịu được lâu không. Ngay cả các á thần cũng không bất bại.
+Defeat. A mere mortal emerged victorious. Can't wait to see how long will you last. Even demigods aren't invicible. = Ta đã bị đánh bại rồi. Một người trần lại thắng một á thần như ta. Ta không thể đợi xem vương quốc của ngươi có chịu được lâu không. Ngay cả các á thần cũng không bất bại...
 I am Gilgamesh, a demigod who descended to Earth to lead the mighty city of Uruk. Let there be peace among us! = Ta là Gil-ga-mét, 1 vị á thần đã dắt xuống thế gian này để cai trị thành U-rúc vĩ đại. Mong có hòa bình chung quanh ta!
 Be blessed, friend. = Chào bạn dưới sự ban ơn của tôi.
 Go on! = Nói tiếp đi!
@@ -81,7 +81,7 @@ Cradle of Civilization = Cái nôi của nền văn hóa.
 Additional 3 Science in capital and additional 1 Science in any other city. Cities with access to Fresh water have +2 Food. = Thêm 3 Khao học cho Thủ đô và 1 Khoa học cho các thành phố khác. Các thành phố có cơ hội gần nguồn nước sạch có +2 Đồ ăn.
 Uruk = U-rúc
 Eridu = Ê-ri-đu
-Kish = Kích
+Kish = Kích (Kish)
 Lagash = La-gát
 Nibru = Ni-bru
 Ur = Ur
@@ -111,12 +111,12 @@ Enegi = E-nê-ghi
 Ki-an = Ki-an
 Aratta = A-rát-ta
 Kutu = Khu-tu
-Der = Đê
+Der = Đê (Der)
 
 Israel = Ít-ra-en
 Solomon = Sô-lô-môn
 Israeli = Người Ít-ra-en
-The Lord demands justice! = Chúa cần công lý!
+The Lord demands justice! = Chúa yêu cầu công lý!
 The Lord told me your plans. We are prepared! = Chúa đã nói hết tất cả các kế hoạch của ngươi rồi. Chúng ta đã chuẩn bị rồi.
 Is this how my peaceful reign ends? In a river of blood and suffering... = Vậy đây là cách mà ngôi vị mà đáng lẽ ra phải hòa bình của ta đã biến mất ư? Dưới một dòng sông toàn máu và sự thống khổ ư...
 I am Solomon, King of the Chosen People. If you seek justice or advice, know that you had found them. = Ta là Sô-lô-môn, vua của dân Chúa chọn. Nếu như ngươi muốn tìm công lý hay 1 lời khuyên, ngươi biết phải tìm ai rồi đó.
@@ -254,21 +254,21 @@ I bring you an excellent offer! = Ta mang đến cho ngươi lời đề nghị 
 Sacred Mountains = Dãi núi thiêng
 All Mountains yield additional 2 Culture and 1 Happiness. Double quantity of Horses and units ignore terrain cost when moving into any tile with Hills. = Tất cả ô đất có Núi sẽ cho thêm 2 Văn hóa và 1 Hạnh phúc. Gấp đôi số lượng Ngựa và bỏ qua chi phí đất đai khi đến tất cả ô đất có Đồi.
 Yerevan = Giê-rê-van
-Tigranakert = 
-Artashat = 
-Yervandashat = 
-Armavir = 
-Gyumri = 
-Vanadzor = 
-Abovyan = 
-Kapan = 
-Ararat = 
-Gavar = 
-Hrazdan = 
-Ijevan = 
-Goris = 
-Ashtarak = 
-Masis = 
+Tigranakert = Ti-gra-na-két
+Artashat = Oa-ta-sát (Artashat)
+Yervandashat = Giê-van-đa-sát
+Armavir = Oa-ma-via (Armavir)
+Gyumri = Gum-ri
+Vanadzor = Va-nát-gio
+Abovyan = A-bót-gian
+Kapan = Ca-pan
+Ararat = A-ra-rát
+Gavar = Ga-va
+Hrazdan = Hờ-rát-đan
+Ijevan = I-giê-van
+Goris = Gô-rít
+Ashtarak = Oát-ta-rắc
+Masis = Ma-sít
 
 Macrobia = 
 Sayid = 
