--- a/jsons/bản dịch/Vietnamese.properties
+++ b/jsons/bản dịch/Vietnamese.properties
@@ -20,7 +20,7 @@ Jagunjagun = Chiến sĩ Jagunjagun
 Mine = Đào
 Mount I = Cưỡi ngựa I
 Mount II = Cưỡi ngựa II
-Pyrrhic Victory = Chiến Thắng kiểu Pyrros
+Pyrrhic Victory = Chiến Thắng kiểu Pi-rốt
 
 
 #TileImprovements#
@@ -270,159 +270,159 @@ Goris = Gô-rít
 Ashtarak = Oát-ta-rắc
 Masis = Ma-sít
 
-Macrobia = 
-Sayid = 
-Macrobian = 
-You have had your chance, prepare for war! = 
-You DARE declare war on us? We shall make you suffer! = 
-So that is how it all ends. In sea of tears and blood. = 
-Who are you? I bet You are here to admire our wealth. = 
-We shall now pray for the better days! = 
-I bring you an excellent offer! = 
-Shackles of Gold = 
-Earns Gold for killing enemy Land units. Conquered cities yield 15% more Gold and Culture = 
-Mogadishu = 
-Avalite = 
-Botiala = 
-Gondal = 
-Toniki = 
-Nikon = 
-Salweyn = 
-Miandi = 
-Sarapion = 
-Hannassa = 
-Bulhar = 
-Essina = 
-Famo = 
-Mosylon = 
-Opone = 
-Mundus = 
+Macrobia = Mạc-rô-bi-a
+Sayid = Sa-giót (Sayid)
+Macrobian = Người Mạc-rô-bi-a
+You have had your chance, prepare for war! = Ngươi đã từng có 1 cơ hội, nhưng giờ thì chuẩn bị đi!
+You DARE declare war on us? We shall make you suffer! = Ngươi DÁM tuyên bố chiến tranh với ta à!? Chúng ta sẽ khiến ngươi thống khổ mà thôi!
+So that is how it all ends. In sea of tears and blood. = Vậy đây mà tất cả mọi thứ đều kết thúc. Trong biển máu và nước mắt...
+Who are you? I bet You are here to admire our wealth. = Ngươi là ai? Còn ta, ta là Sa-giót, và ta chắc ngươi đến đây để chiêm ngưỡng của cải của ta.
+We shall now pray for the better days! = Giờ chúng ta cầu nguyện cho một ngày mai tươi sáng!
+I bring you an excellent offer! = Ta mang đến cho ngươi một đề nghị tuyệt vời!
+Shackles of Gold = Xiềng xích bằng vàng
+Earns Gold for killing enemy Land units. Conquered cities yield 15% more Gold and Culture = Giết được đơn vị quân sự của địch sẽ nhận được Vàng. Các thành phố bị chiếm bởi bạn sẽ nhận thêm 15% Vàng và Văn hóa. 
+Mogadishu = Mô-ga-đi-su
+Avalite = A-va-lít
+Botiala = Bô-ti-a-la
+Gondal = Gôn-đa
+Toniki = Tôn-ni-ki
+Nikon = Ni-côn
+Salweyn = Sa-que-uyên
+Miandi = Mi-an-đi
+Sarapion = Sa-ra-pi-on
+Hannassa = Han-nát-sa
+Bulhar = Bu-ha
+Essina = Ét-si-na
+Famo = Fa-mô
+Mosylon = Mô-si-lon
+Opone = Ô-pôn
+Mundus = Mun-đút
 
-Olmec = 
-U Kix Chan = 
-Olmec = 
-War! The Feathered Serpent demands sacrificial blood! = 
-Is it bravery or stupidity? = 
-That's the greatest sacrifice I can offer You! = 
-Were you send by the great Serpent? = 
-What such bloodhirsty beast might want? = 
-What do you think? = 
-Feathered Serpent = 
-Receive 10% bonus toward correspondent Great Person when you build an unique specialist building in your Empire for the first time = 
-La Venta = 
-San Lorenzo = 
-Tres Zapotes = 
-Izapa = 
-Tzapotl = 
-Tonala = 
-Texpa = 
-Tlapocoya = 
-Xoc = 
-Coatztitlan = 
-Izacoya = 
+Olmec = Tộc người Ô-méc
+U Kix Chan = U Kít Chan (U Kix Chan)
+Olmec = Người Ô-méc
+War! The Feathered Serpent demands sacrificial blood! = Thời chiến tranh đã đến rồi! Thần Rắn Có Cánh đang yêu cầu máu hiến tế!!!
+Is it bravery or stupidity? = Đây là dũng cảm hay là ngu xuẩn đây?
+That's the greatest sacrifice I can offer You! =  Đó là buổi hiến tế lớn nhất mà ta mang đến cho ngươi rồi đó!
+Were you send by the great Serpent? = Có phải ngươi được Thần Rắn gửi đến cho ta hay không?
+What such bloodhirsty beast might want? =  Một con quỷ khát máu như ngươi muốn gì đây?
+What do you think? =  Ngươi nghĩ như thế nào?
+Feathered Serpent = Thần Rắn Có Cánh
+Receive 10% bonus toward correspondent Great Person when you build an unique specialist building in your Empire for the first time = Nhận được 10% Bonus với các Người Vĩ đại tương xứng khi xây 1 tòa nhà đặc biệt trong Đế chế của bạn lần đầu tiên.
+La Venta = La Ven-ta
+San Lorenzo = San Lo-ren-sô
+Tres Zapotes = Trét Gia-pô-tét
+Izapa = I-gia-pa
+Tzapotl = Tza-pốt
+Tonala = Tôn-na-la
+Texpa = Tét-pa
+Tlapocoya = Tla-pô-cô-gia
+Xoc = Sốc (Xoc)
+Coatztitlan = Cốt-sti-tít-lan
+Izacoya = I-gia-cô-ya
 
-Nok = 
-Olori = 
-Nok = 
-You must be destroyed! = 
-Oh, I see. I did not expect anything else from you. = 
-We might die, but our culture is eternal. = 
-Welcome to our lands. May there be peace among us! = 
-Oh? = 
-Do you like it? = 
-African Treasures = 
-All cities provide 1 copy of Terracotta luxury resource. +1 Science from every Iron. Workers may be expended to instantly create Mine improvemenet regardless of base terrain = 
-Nok = 
-Jos = 
-Ife = 
-Samun = 
-Kagara = 
-Janjala = 
-Kwoi = 
-Jere = 
-Dokku = 
-Bokkos = 
-Riyom = 
-Ogbabu = 
-Pangajere = 
-Taruga = 
-Kamrun = 
-Vom = 
-Chakwama = 
-Dogo-Dogo = 
-Jagwa = 
+Nok = Tộc người Nốc (Nok)
+Olori = Ô-lô-ri
+Nok = Người Nốc (Nok)
+You must be destroyed! =  Ngươi cần phải bị trừng phạt thích đáng!
+Oh, I see. I did not expect anything else from you. = Ồ, ta hiểu rồi. Ta không ngờ mọi thứ khác từ ngươi mà thôi.
+We might die, but our culture is eternal. = Chúng ta có thể chết, nhưng văn hóa của chúng ta sẽ không bao giờ chết. Ngươi hãy ghi nhớ lời ta đấy!
+Welcome to our lands. May there be peace among us! = Chào mừng ngươi đến đất của người Nốc (Nok). Mong có hòa bình trong hai chúng ta.
+Oh? = Ồ?
+Do you like it? = Ngươi có thích không?
+African Treasures = Kho báu đất Châu Phi
+All cities provide 1 copy of Terracotta luxury resource. +1 Science from every Iron. Workers may be expended to instantly create Mine improvemenet regardless of base terrain = Tất cả các thành phố cho 1 Đất nung. +1 Khoa học từ mọi quặng Sắt. Công nhân có thể có khả năng Đào không bởi địa hình bề mặt.
+Nok = Nốc (Nok)
+Jos = Giốt (Jos)
+Ife = Íp (Ife)
+Samun = Sa-mun
+Kagara = Ka-ga-ra
+Janjala = Gan-gia-la
+Kwoi = Cuôi (Kwoi)
+Jere = Giê-rê
+Dokku = Dốc-cô
+Bokkos = Bốc-cốt
+Riyom = Ri-giôm
+Ogbabu = Ộc-ba-bu
+Pangajere = Pan-ga-giê-rê
+Taruga = Ta-ru-ga
+Kamrun = Cam-run
+Vom = Vom
+Chakwama = Chắt-qua-ma
+Dogo-Dogo = Dô-gô - Dô-gô
+Jagwa = Giác-qua
 
-Himyar = 
-Charibael = 
-Himyarite = 
-You are an obstacle and you shall be removed! = 
-Disappointing... = 
-You may take our lands, but you will never take our pride! = 
-Welcome to my court. I bet the smell of our Incense got you here. = 
-Yes? A candle of peace? = 
-I think that's a fair offer. = 
-Desert Paradise = 
-May convert Incense to Myrrh or Frankincense luxury resources = 
-Zafar = 
-Sana'a = 
-Ma'rib = 
-Najran = 
-Mocha = 
-Haram = 
-Haywan = 
-Mukhwan = 
-Yabrin = 
-Shabwa = 
-Wa'lan = 
-Libna = 
-Nashaq = 
-Timna = 
-Sirwah = 
-Quarnawu = 
-Kaminahu = 
-Baraqish = 
+Himyar = Him-gia
+Charibael = Cha-ri-bê
+Himyarite = Người Him-gia
+You are an obstacle and you shall be removed! = Ngươi là một sự cản trở và ta sẽ bỏ ngươi ra khỏi đường lối của ta!
+Disappointing... = Thật đáng thất vọng cho ngươi đó...
+You may take our lands, but you will never take our pride! = Ngươi co thể chiếm đất của ta, nhưng lòng vinh hạnh của dân ta sẽ còn mãi!
+Welcome to my court. I bet the smell of our Incense got you here. = Chào mừng tới triều đình của ta. Ta chắc mùi trầm đã mang ngươi đến đây.
+Yes? A candle of peace? = Sao? Cây nến của hòa bình á? Ta chấp nhận.
+I think that's a fair offer. = Ta nghĩ đây là một đề nghị công bằng cho ngươi và ta đấy.
+Desert Paradise = Thiên đường giữa Hoang mạc
+May convert Incense to Myrrh or Frankincense luxury resources = Có thể biến Trầm thành Mộc dược hay Trầm hương.
+Zafar = Gia-pha
+Sana'a = Sa-na-a (Sana'a)
+Ma'rib = Ma-ríp
+Najran = Nách-ran
+Mocha = Mo-ca (Mocha)
+Haram = Ha-ram
+Haywan = Hây-quan
+Mukhwan = Mục-quan
+Yabrin = Giáp-rin
+Shabwa = Sáp-qua
+Wa'lan = Qua-lan
+Libna = Líp-na
+Nashaq = Na-sa (Nashaq)
+Timna = Tim-na
+Sirwah = Sơ-qua (Sirwah)
+Quarnawu = Qua-na-wu
+Kaminahu = Ka-mi-na-hu
+Baraqish = Ba-rát-quýt
 
-Epirus = 
-Pyrrhus = 
-Epirote = 
-There can be only one king. Prepare for battle! = 
-I think my emissary must have been late, I already declared war on you! = 
-You were a worthy opponent. The gods will welcome me! = 
-Welcome to Epirus, friend. I am king Pyrrhus. Are you another expenda... I mean Ally... or perhaps a next target of my army? = 
-Hail, great lord. This was indeed a good fight. = 
-That should do. = 
-Pyrrhic Victory = 
-Can't train Settlers. All military units have + 50% more strength when attacking, but suffer -25% penalty when defending. Gain Free Worker whenever you conquer a new city. +50% Production when constructing military units. = 
-Ambracia = 
-Phoenike = 
-Passaron = 
+Epirus = E-pi-rút
+Pyrrhus = Pi-rốt
+Epirote = Người E-pi-rốt
+There can be only one king. Prepare for battle! = Chỉ có một vua thống trị vùng đất này. Chuẩn bị thách đấu đi!
+I think my emissary must have been late, I already declared war on you! = Ta chắc sứ giả của ta tới muộn mà thôi. Ta đã tuyên chiến với ngươi rồi. 
+You were a worthy opponent. The gods will welcome me! = Ngươi đúng là một đối thủ đáng giá. Các thần sẽ chào đón ta trên thiên đàng! Chúc may mắn.
+Welcome to Epirus, friend. I am king Pyrrhus. Are you another expenda... I mean Ally... or perhaps a next target of my army? = Chào mừng tới E-pi-rốt, ta là Pi-rốt. Có phải ngươi lại là một người tham chiế... Ý ta là đồng minh... hay là một mục tiêu tiếp theo cho quân đội của ta?
+Hail, great lord. This was indeed a good fight. = Chào, vị lãnh đạo vĩ đại. Đây đúng là một trận đấu hay.
+That should do. = Cái này được này.
+Pyrrhic Victory = Chiến thắng kiểu Pi-rốt
+Can't train Settlers. All military units have + 50% more strength when attacking, but suffer -25% penalty when defending. Gain Free Worker whenever you conquer a new city. +50% Production when constructing military units. = Không thể huấn luyện Người di cư. Các đơn vị quân sự sẽ nhận +50% khi tấn công, nhưng -25% khi phòng thủ. Nhận được Công nhân miễn phí khi chiếm được 1 thành phố. +50% Sản xuất khi tạo ra một đơn vị quân sự. 
+Ambracia = Am-bra-si-a
+Phoenike = Phô-e-níc
+Passaron = Pát-sa-rôn
 
-Scythia = 
-Ateas = 
-Scythian = 
-I am afraid your reign is over! = 
-We will sunk you in your own blood. = 
-I must rest. = 
-Welcome to the steppes. I am Ateas, the king of the Scythian people. = 
-I hope you've learned something from our last dispute. = 
-Do you like my offer? = 
-People of the Steppe = 
-Gelonus = 
-Solokha = 
-Aimonov = 
-Tanais = 
-Neapolis = 
-Kalermes = 
-Maikop = 
-Tyras = 
-Kul Oba = 
-Olbia = 
-Kerch = 
-Mologeni = 
-Bosporus = 
-Chersonesos = 
-Syebi = 
-Phanogoria = 
-Aorsi = 
-Massagetae = 
-Qabala
+Scythia = Si-thi-a
+Ateas = A-tê-át
+Scythian = Người Si-thi-a
+I am afraid your reign is over! = I nghi rằng triều đại của người sẽ tàn lụi!
+We will sunk you in your own blood. = Chúng ta sẽ nhấn chìm ngươi với máu của ngươi đó!
+I must rest. = Ta phải nghỉ thôi.
+Welcome to the steppes. I am Ateas, the king of the Scythian people. = Chào mừng tới bộ lạc. Ta là A-tê-át, vua của người Si-thi-a.
+I hope you've learned something from our last dispute. = Ta mong ngươi đã học được sau cuộc đụng độ này.
+Do you like my offer? = Ngươi có thích lời đề nghị của ta không?
+People of the Steppe = Con người của Bộ lạc
+Gelonus = Ghê-lô-nút
+Solokha = Sô-lô-kha
+Aimonov = Ai-mô-nốp
+Tanais = Ta-nai-ít
+Neapolis = Nê-a-pô-lít
+Kalermes = Ca-lê-mét
+Maikop = Mai-cốp
+Tyras = Ti-rát
+Kul Oba = Cu Ô-ba (Kul Oba)
+Olbia = Ô-bi-a
+Kerch = Két (Kerch)
+Mologeni = Mô-lô-gen-ni
+Bosporus = Bót-pô-rút
+Chersonesos = Khê-sôn-nê-sốt
+Syebi = Si-e-bi
+Phanogoria = Pha-nô-gô-ri-a
+Aorsi = A-ô-si
+Massagetae = Mạt-sa-gê-ta-e
+Qabala = Qua-ba-la
